--- a/.github/workflows/flow-pull-request-checks.yaml
+++ b/.github/workflows/flow-pull-request-checks.yaml
@@ -76,6 +76,44 @@ jobs:
       - name: Stop the local node
         run: npm run stop
 
+  smoke-tests-windows:
+    name: Smoke Tests on Windows
+    runs-on: windows-2022
+
+    strategy:
+      fail-fast: false
+      matrix:
+        node-version: [18.x]
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4.1.1
+
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@60edb5dd545a775178f52524783378180af0d1f8 # v4.0.2
+        with:
+          node-version: ${{ matrix.node-version }}
+          cache: npm
+
+      - name: Install dependencies
+        run: |
+          npm ci
+          cd test/smoke
+          npm ci
+
+      - name: Start the local node
+        run: npm run start -- -d --verbose=trace
+
+      - name: Run smoke test
+        uses: step-security/retry@052d8009a065e321fd72db951d7e412f8063b9e5 # v3.0.0
+        with:
+          max_attempts: 3
+          timeout_minutes: 3
+          command: npm run test:smoke
+
+      - name: Stop the local node
+        run: npm run stop
+
   browser-tests:
     name: Browser Tests
     runs-on: local-node-linux-large
@@ -119,37 +157,6 @@ jobs:
   unit-tests:
     name: Unit Tests
     runs-on: local-node-linux-medium
-
-    strategy:
-      fail-fast: false
-      matrix:
-        node-version: [18.x]
-
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4.1.1
-
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@60edb5dd545a775178f52524783378180af0d1f8 # v4.0.2
-        with:
-          node-version: ${{ matrix.node-version }}
-          cache: npm
-
-      - name: Install dependencies
-        run: npm ci
-
-      - name: Run tests
-        run: npm run test
-
-      - name: Upload coverage report
-        if: ${{ always() && !cancelled() }}
-        uses: codecov/codecov-action@e28ff129e5465c2c0dcc6f003fc735cb6ae0c673 # v4.5.0
-        with:
-          token: ${{ secrets.CODECOV_TOKEN }}
-
-  unit-tests-windows:
-    name: Unit Tests on Windows 2022
-    runs-on: windows-2022
 
     strategy:
       fail-fast: false
