--- a/.github/workflows/flow-pull-request-checks.yaml
+++ b/.github/workflows/flow-pull-request-checks.yaml
@@ -89,16 +89,11 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4.1.1
 
-#      - name: Use Node.js ${{ matrix.node-version }}
-#        uses: actions/setup-node@60edb5dd545a775178f52524783378180af0d1f8 # v4.0.2
-#        with:
-#          node-version: ${{ matrix.node-version }}
-#          cache: npm
-
-      - name: Use Node.js 20
-        uses: actions/setup-node@0a44ba7841725637a19e28fa30b79a866c81b0a6 # v4.0.4
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@60edb5dd545a775178f52524783378180af0d1f8 # v4.0.2
         with:
-          node-version: 20
+          node-version: ${{ matrix.node-version }}
+          cache: npm
 
       - name: Install dependencies
         run: |
@@ -106,8 +101,8 @@ jobs:
           cd test/smoke
           npm ci
 
-#      - name: Setup tmate session
-#        uses: mxschmitt/action-tmate@v3
+      - name: Setup tmate session
+        uses: mxschmitt/action-tmate@v3
 
       - name: Start the local node
         run: npm run start -- -d --verbose=trace
