--- a/.github/workflows/flow-pull-request-checks-on-macos.yaml
+++ b/.github/workflows/flow-pull-request-checks-on-macos.yaml
@@ -68,6 +68,9 @@ jobs:
           cd test/smoke
           npm ci
 
+      - name: Setup tmate session
+        uses: mxschmitt/action-tmate@v3
+
       - name: Start the local node
         run: npm run start -- -d --verbose=trace
 
@@ -81,83 +84,83 @@ jobs:
       - name: Stop the local node
         run: npm run stop
 
-  browser-tests:
-    name: Browser Tests
-    runs-on: local-node-linux-large
-
-    strategy:
-      fail-fast: false
-      matrix:
-        node-version: [18.x]
-
-    steps:
-      - name: Harden Runner
-        uses: step-security/harden-runner@91182cccc01eb5e619899d80e4e971d6181294a7 # v2.10.1
-        with:
-          egress-policy: audit
-
-      - name: Checkout repository
-        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
-
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@39370e3970a6d050c480ffad4ff0ed4d3fdee5af # v4.1.0
-        with:
-          node-version: ${{ matrix.node-version }}
-          cache: npm
-
-      - name: Install dependencies
-        run: |
-          sudo apt-get update
-          sudo apt-get install libgtk2.0-0 libgtk-3-0 libgbm-dev libnotify-dev  -y
-          sudo apt-get install libnss3 libxss1 libasound2 libxtst6 xauth xvfb -y
-          npm ci
-
-      - name: Start local node
-        run: npm run start -- -d --verbose=trace
-
-      - name: Prepare and run the tests
-        run: |
-          cd test/cypress
-          npm ci
-          npm run build
-          npm run start
-          npm run test
-
-      - name: Stop the local node
-        run: npm run stop
-
-  unit-tests:
-    name: Unit Tests
-    runs-on: local-node-linux-medium
-
-    strategy:
-      fail-fast: false
-      matrix:
-        node-version: [18.x]
-
-    steps:
-      - name: Harden Runner
-        uses: step-security/harden-runner@91182cccc01eb5e619899d80e4e971d6181294a7 # v2.10.1
-        with:
-          egress-policy: audit
-
-      - name: Checkout repository
-        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
-
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@39370e3970a6d050c480ffad4ff0ed4d3fdee5af # v4.1.0
-        with:
-          node-version: ${{ matrix.node-version }}
-          cache: npm
-
-      - name: Install dependencies
-        run: npm ci
-
-      - name: Run tests
-        run: npm run test
-
-      - name: Upload coverage report
-        if: ${{ always() && !cancelled() }}
-        uses: codecov/codecov-action@b9fd7d16f6d7d1b5d2bec1a2887e65ceed900238 # v4.6.0
-        with:
-          token: ${{ secrets.CODECOV_TOKEN }}
+#  browser-tests:
+#    name: Browser Tests
+#    runs-on: macos-latest
+#
+#    strategy:
+#      fail-fast: false
+#      matrix:
+#        node-version: [20.x]
+#
+#    steps:
+#      - name: Harden Runner
+#        uses: step-security/harden-runner@91182cccc01eb5e619899d80e4e971d6181294a7 # v2.10.1
+#        with:
+#          egress-policy: audit
+#
+#      - name: Checkout repository
+#        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+#
+#      - name: Use Node.js ${{ matrix.node-version }}
+#        uses: actions/setup-node@39370e3970a6d050c480ffad4ff0ed4d3fdee5af # v4.1.0
+#        with:
+#          node-version: ${{ matrix.node-version }}
+#          cache: npm
+#
+#      - name: Install dependencies
+#        run: |
+#          sudo apt-get update
+#          sudo apt-get install libgtk2.0-0 libgtk-3-0 libgbm-dev libnotify-dev  -y
+#          sudo apt-get install libnss3 libxss1 libasound2 libxtst6 xauth xvfb -y
+#          npm ci
+#
+#      - name: Start local node
+#        run: npm run start -- -d --verbose=trace
+#
+#      - name: Prepare and run the tests
+#        run: |
+#          cd test/cypress
+#          npm ci
+#          npm run build
+#          npm run start
+#          npm run test
+#
+#      - name: Stop the local node
+#        run: npm run stop
+#
+#  unit-tests:
+#    name: Unit Tests
+#    runs-on: macos-latest
+#
+#    strategy:
+#      fail-fast: false
+#      matrix:
+#        node-version: [20.x]
+#
+#    steps:
+#      - name: Harden Runner
+#        uses: step-security/harden-runner@91182cccc01eb5e619899d80e4e971d6181294a7 # v2.10.1
+#        with:
+#          egress-policy: audit
+#
+#      - name: Checkout repository
+#        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+#
+#      - name: Use Node.js ${{ matrix.node-version }}
+#        uses: actions/setup-node@39370e3970a6d050c480ffad4ff0ed4d3fdee5af # v4.1.0
+#        with:
+#          node-version: ${{ matrix.node-version }}
+#          cache: npm
+#
+#      - name: Install dependencies
+#        run: npm ci
+#
+#      - name: Run tests
+#        run: npm run test
+#
+#      - name: Upload coverage report
+#        if: ${{ always() && !cancelled() }}
+#        uses: codecov/codecov-action@b9fd7d16f6d7d1b5d2bec1a2887e65ceed900238 # v4.6.0
+#        with:
+#          token: ${{ secrets.CODECOV_TOKEN }}
